--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,7 @@
   padding: 100px 0 140px;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
 }
 
 .staff__title {
