Refactor footer logo structure and reset margin for footer columns

--- a/styles/style.css
+++ b/styles/style.css
@@ -356,6 +356,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  margin: 0;
 }
 
 .footer__column_content_hours {
