--- a/styles/style.css
+++ b/styles/style.css
@@ -337,12 +337,11 @@
 
 .footer {
   box-sizing: border-box;
-  background-color: black;
-  color: white;
+  background-color: #1f1f1f;
+  color: #ffffff;
   padding: 60px 80px;
   display: flex;
   flex-direction: column;
-  gap: 100px;
 }
 
 .footer__columns {
@@ -371,7 +370,7 @@
 .footer__logo {
   display: flex;
   margin: 0;
-  width: 50px;
+  width: 58px;
   height: 80px;
 }
 
@@ -397,17 +396,20 @@
 }
 
 .footer__column-link {
-  color: white;
+  color: #ffffff;
   text-decoration: none;
+  display: flex;
+  align-items: flex-start;
+  column-gap: 10px;
 }
 
 .footer__social-icon {
   width: 16px;
   height: 16px;
-  margin-right: 10px;
 }
 
 .footer__copyright {
   display: flex;
   margin: 0;
+  margin-top: 100px;
 }
