--- a/styles/style.css
+++ b/styles/style.css
@@ -399,7 +399,7 @@
   color: #ffffff;
   text-decoration: none;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   column-gap: 10px;
 }
 
